--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
       - run: npm run build
       - run:
           command: |
+            git stash
             git checkout gh-pages
             mv build/* .
             rm -rf build
