--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,8 @@ jobs:
       - run: npm run build
       - run:
           command: |
+            git config user.email "circleci@nroehrig.de"
+            git config user.name "CircleCI"
             git stash
             git checkout gh-pages
             mv build/* .
