--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: |
             git config user.email "circleci@nroehrig.de"
             git config user.name "CircleCI"
-            git stash
+            git checkout package*.json
             git checkout gh-pages
             mv build/* .
             rm -rf build
