--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,13 @@ jobs:
       - run:
           name: Deploy app to Github Pages
           command: |
-            git config user.email $GIT_MAIL
-            git config user.name $GIT_USER
-            git stash
-            git checkout gh-pages
-            cp dist/* . -rf
-            rm dist -rf
-            git add .
-            git push origin gh-pages
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              git config user.email $GIT_MAIL
+              git config user.name $GIT_USER
+              git stash
+              git checkout gh-pages
+              cp dist/* . -rf
+              rm dist -rf
+              git add .
+              git push origin gh-pages
+            fi
