--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,10 @@ jobs:
 
       - run:
           name: Build app
-          command: npm run build
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              npm run build
+            fi
 
       - run:
           name: Deploy app to Github Pages
