--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
               git commit -m "update for deployment \#${CIRCLE_BUILD_NUM}"
               if [ "$?" = "0" ]; then
                 git push origin gh-pages
-              else if [ "$? = "1" ]; then
+              else if [ "$?" = "1" ]; then
                 exit 0
               fi
             fi
