--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: npm install ci
+          command: npm ci
 
       - save_cache:
           paths:
