--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vuetodo",
   "description": "Vue Todo",
   "version": "2.0.0",
+  "author": "nr@nroehrig.de",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
