fix path issues; add new deploy script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,19 +54,7 @@ jobs:
           name: Deploy app to Github Pages
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              git config user.email $GIT_MAIL
-              git config user.name $GIT_USER
-              git stash
-              git checkout gh-pages
-              git checkout master .circleci
-              cp dist/* . -rf
-              rm dist -rf
-              git add .
-              git commit -m "update for deployment \#${CIRCLE_BUILD_NUM}"
-              if [ "$?" = "0" ]; then
-                git push origin gh-pages
-              elif [ "$?" = "1" ]; then
-                exit 0
-              fi
+              chmod +x deploy.sh
+              ./deploy.sh
             fi
 
