--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,8 @@ version: 2
 jobs:
   build:
     branches:
-      only:
-        - master
-        - dev
+      ignore:
+        - gh-pages
     docker:
       # specify the version you desire here
       - image: circleci/node:10.14
